@@ -40,7 +40,6 @@
             <b>Calculate in the cloud:</b>
               <ul>
                 <li>Get an <a href="http://www.globalquakemodel.org/gem/terms/oats/" target="_blank">OATS </a>account to begin using the OpenQuake Engine. An OATS account will allow you to run calculations through a web interface, and the calcualtions and data are in the cloud</li>
-                <li> <a href="{% url 'icebox' %}">Run a demo calculation now</a></li>
               </ul>
             <b>Calculate on a desktop computer or server:</b>
               <ul>
